--- a/producto/dermo-clean-foam.html
+++ b/producto/dermo-clean-foam.html
@@ -325,7 +325,7 @@
         </div>
 
         <div class="container">
-            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tattoo Aftercare?
+            <h2 class="more-products text-center">¿Ya viste otros productos PRO-TEC ?
             </h2>
             <div class="row">
                 <div class="col-12">
@@ -334,8 +334,8 @@
                             <img src="../assets/img/products/tattoo_moist_balm/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/kit-con-3-tattoo-moisturizing-balm-balsamo-para-tatuar/up/MLMU569573926?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=7&type=product&tracking_id=f51bfe7e-ef19-40be-bf15-718572663213&wid=MLM1910724443&sid=search"
-                                    target="_blank"><button type="button"
-                                        class="btn btn-dark button-product">Bálsamo</button></a>
+                                    target="_blank"><button type="button" class="btn btn-dark button-product">Bálsamo
+                                        Humectante</button></a>
                             </div>
                         </div>
                         <div class="col-4">
@@ -343,7 +343,7 @@
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-espuma-dermolimpiadora--ecorecarga/up/MLMU589842185?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=12&type=product&tracking_id=9cdac9b8-fc2f-4350-b740-45adfc588388&wid=MLM916839411&sid=search"
                                     target="_blank"><button type="button"
-                                        class="btn btn-dark button-product">Eco</button>
+                                        class="btn btn-dark button-product">ECO-Recarga Espuma </button>
                                 </a>
                             </div>
                         </div>
