--- a/producto/piercing-aftercare-gel.html
+++ b/producto/piercing-aftercare-gel.html
@@ -331,8 +331,8 @@
                             <img src="../assets/img/products/tattoo_aftercare/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/pack-3-pzs-tattoo--piercing-aftercare/up/MLMU586769629?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=b1908714-36ea-4dbc-bfa0-c4cf67fbb3c4&wid=MLM852422862&sid=storefronts&global_position=8"
-                                    target="_blank"><button type="button"
-                                        class="btn btn-dark button-product">Pomada</button></a>
+                                    target="_blank"><button type="button" class="btn btn-dark button-product">Pomada
+                                        Humectante</button></a>
                             </div>
                         </div>
                         <div class="col-4">
@@ -340,8 +340,8 @@
                                 class="img-fluid">
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/pack-3-pzs-solucion-de-limpieza-piercing-aftercare-neekdna/up/MLMU3437066295?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=758101b4-9fa0-4a2b-9f7b-37ac6ab43689&wid=MLM4119729188&sid=storefronts&global_position=8"
-                                    target="_blank"> <button type="button"
-                                        class="btn btn-dark button-product">Gel</button>
+                                    target="_blank"> <button type="button" class="btn btn-dark button-product">Solución
+                                        de limpieza</button>
                                 </a>
                             </div>
                         </div>
