--- a/producto/skin-tattoo-moisturiser.html
+++ b/producto/skin-tattoo-moisturiser.html
@@ -318,7 +318,7 @@
         </div>
 
         <div class="container">
-            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tattoo Aftercare?
+            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Aftercare?
 
             </h2>
             <div class="row">
@@ -328,8 +328,8 @@
                             <img src="../assets/img/products/tattoo_aftercare/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/pack-3-pzs-tattoo--piercing-aftercare/up/MLMU586769629?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=b1908714-36ea-4dbc-bfa0-c4cf67fbb3c4&wid=MLM852422862&sid=storefronts&global_position=8"
-                                    target="_blank"><button type="button"
-                                        class="btn btn-dark button-product">Pomada</button></a>
+                                    target="_blank"><button type="button" class="btn btn-dark button-product">Pomada
+                                        Humectante</button></a>
                             </div>
                         </div>
                         <div class="col-4">
@@ -337,8 +337,8 @@
                                 class="img-fluid">
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/neekdna-gel-limpiador-tatuajes-tattoo-cleansing-kit-3-pzs/up/MLMU3351704298?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=f05e6cfc-91f4-40c1-be96-4af23078e389&wid=MLM2399616701&sid=storefronts&global_position=8"
-                                    target="_blank"> <button type="button"
-                                        class="btn btn-dark button-product">Gel</button>
+                                    target="_blank"> <button type="button" class="btn btn-dark button-product">Gel
+                                        Limpiador</button>
                                 </a>
                             </div>
                         </div>
