--- a/producto/tattoo-aftercare.html
+++ b/producto/tattoo-aftercare.html
@@ -345,8 +345,8 @@
                             <img src="../assets/img/products/skin_tattoo_moist/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/tres-cremas-humectantes-para-tatuajes-fps30-tattoo-skincare/up/MLMU569339139?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=6d628afb-3a83-4573-9043-81fbcfa93923&wid=MLM2121026084&sid=storefronts&global_position=8"
-                                    target="_blank"><button type="button"
-                                        class="btn btn-dark button-product">Crema</button></a>
+                                    target="_blank"><button type="button" class="btn btn-dark button-product">Crema
+                                        Humectante</button></a>
                             </div>
                         </div>
                         <div class="col-4">
@@ -354,8 +354,8 @@
                                 class="img-fluid">
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/neekdna-gel-limpiador-tatuajes-tattoo-cleansing-kit-3-pzs/up/MLMU3351704298?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=f05e6cfc-91f4-40c1-be96-4af23078e389&wid=MLM2399616701&sid=storefronts&global_position=8"
-                                    target="_blank"> <button type="button"
-                                        class="btn btn-dark button-product">Gel</button>
+                                    target="_blank"> <button type="button" class="btn btn-dark button-product">Gel
+                                        Limpiador</button>
                                 </a>
                             </div>
                         </div>
