--- a/producto/tattoo-cleansing-gel.html
+++ b/producto/tattoo-cleansing-gel.html
@@ -334,16 +334,16 @@
                             <img src="../assets/img/products/tattoo_aftercare/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/pack-3-pzs-tattoo--piercing-aftercare/up/MLMU586769629?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=b1908714-36ea-4dbc-bfa0-c4cf67fbb3c4&wid=MLM852422862&sid=storefronts&global_position=8"
-                                    target="_blank"><button type="button"
-                                        class="btn btn-dark button-product">Pomada</button></a>
+                                    target="_blank"><button type="button" class="btn btn-dark button-product">Pomada
+                                        Humectante</button></a>
                             </div>
                         </div>
                         <div class="col-4">
                             <img src="../assets/img/products/skin_tattoo_moist/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/tres-cremas-humectantes-para-tatuajes-fps30-tattoo-skincare/up/MLMU569339139?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=6d628afb-3a83-4573-9043-81fbcfa93923&wid=MLM2121026084&sid=storefronts&global_position=8"
-                                    target="_blank"> <button type="button"
-                                        class="btn btn-dark button-product">Crema</button>
+                                    target="_blank"> <button type="button" class="btn btn-dark button-product">Crema
+                                        Humectante</button>
                                 </a>
                             </div>
                         </div>
