--- a/producto/piercing-aftercare-sol.html
+++ b/producto/piercing-aftercare-sol.html
@@ -324,8 +324,8 @@
                             <img src="../assets/img/products/tattoo_aftercare/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/pack-3-pzs-tattoo--piercing-aftercare/up/MLMU586769629?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=b1908714-36ea-4dbc-bfa0-c4cf67fbb3c4&wid=MLM852422862&sid=storefronts&global_position=8"
-                                    target="_blank"><button type="button"
-                                        class="btn btn-dark button-product">Pomada</button></a>
+                                    target="_blank"><button type="button" class="btn btn-dark button-product">Pomada
+                                        Humectante</button></a>
                             </div>
                         </div>
                         <div class="col-4">
@@ -333,8 +333,8 @@
                                 class="img-fluid">
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/kit-neekdna-piercing-aftercare-3-piezas/up/MLMU592282152?pdp_filters=seller_id%3A5315826#polycard_client=mshops-appearance-api&component=collection_grid&source=eshops&title=Kits+Aftercare%2C+Skincare+y+PRO-TEC&tracking_id=170ef174-04be-4435-807d-983e63a87943&wid=MLM909975311&sid=storefronts&global_position=8"
-                                    target="_blank"> <button type="button"
-                                        class="btn btn-dark button-product">Gel</button>
+                                    target="_blank"> <button type="button" class="btn btn-dark button-product">Gel
+                                        Limpiador</button>
                                 </a>
                             </div>
                         </div>
