--- a/producto/tattoo-moisturizing-balm.html
+++ b/producto/tattoo-moisturizing-balm.html
@@ -315,7 +315,7 @@
         </div>
 
         <div class="container">
-            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tattoo Aftercare?
+            <h2 class="more-products text-center">¿Ya viste otros productos PRO-TEC ?
             </h2>
             <div class="row">
                 <div class="col-12">
@@ -324,8 +324,8 @@
                             <img src="../assets/img/products/dermo_clean_foam/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-espuma-dermolimpiadora--ecorecarga/up/MLMU589842185?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=12&type=product&tracking_id=9cdac9b8-fc2f-4350-b740-45adfc588388&wid=MLM916839411&sid=search"
-                                    target="_blank"><button type="button"
-                                        class="btn btn-dark button-product">Espuma</button></a>
+                                    target="_blank"><button type="button" class="btn btn-dark button-product">Espuma
+                                        Dermolimpiadora</button></a>
                             </div>
                         </div>
                         <div class="col-4">
@@ -333,7 +333,7 @@
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-neekdna-protec-espumabalsamoabsorbente/up/MLMU592273336?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=10&type=product&tracking_id=36227f18-b4a1-4e3f-8a62-04f7515a28e7&wid=MLM916839308&sid=search"
                                     target="_blank"> <button type="button"
-                                        class="btn btn-dark button-product">Absorbente</button>
+                                        class="btn btn-dark button-product">Absorbente de Residuos</button>
                                 </a>
                             </div>
                         </div>
