--- a/producto/waste-absorbent.html
+++ b/producto/waste-absorbent.html
@@ -314,7 +314,7 @@
         </div>
 
         <div class="container">
-            <h2 class="more-products text-center">¿Ya viste nuestros productos Tattoo Skincare y Tattoo Aftercare?
+            <h2 class="more-products text-center">¿Ya viste otros productos PRO-TEC ?
             </h2>
             <div class="row">
                 <div class="col-12">
@@ -324,15 +324,15 @@
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-espuma-dermolimpiadora--ecorecarga/up/MLMU589842185?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=12&type=product&tracking_id=9cdac9b8-fc2f-4350-b740-45adfc588388&wid=MLM916839411&sid=search"
                                     target="_blank"><button type="button"
-                                        class="btn btn-dark button-product">Eco</button></a>
+                                        class="btn btn-dark button-product">ECO-Recarga Espuma </button></a>
                             </div>
                         </div>
                         <div class="col-4">
                             <img src="../assets/img/products/dermo_clean_foam/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
                                 <a href="https://www.mercadolibre.com.mx/kit-para-tatuar-espuma-dermolimpiadora--ecorecarga/up/MLMU589842185?pdp_filters=seller_id%3A5315826#polycard_client=search-nordic&search_layout=grid&position=12&type=product&tracking_id=9cdac9b8-fc2f-4350-b740-45adfc588388&wid=MLM916839411&sid=search"
-                                    target="_blank"> <button type="button"
-                                        class="btn btn-dark button-product">Espuma</button>
+                                    target="_blank"> <button type="button" class="btn btn-dark button-product">Espuma
+                                        Dermolimpiadora</button>
                                 </a>
                             </div>
                         </div>
